# lore

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/lore/: __init__.py  cli.py  compiler.py  mcp_server.py  store.py  types.py
tests/: test_core.py
